--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "dialog": "^0.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
