--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@radix-ui/themes": "^1.1.2",
     "@supabase/supabase-js": "^2.33.1",
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
